# AXBootCamp

./: .gitignore  README.md
chapter-1/: README.md
chapter-2/: .gitignore  CLAUDE.md  SETUP.md  TODO.md  generate_ppt.py  persona-prompt.md  requirements.txt
chapter-2/demo/: .env.example  .gitignore  pyproject.toml  requirements.txt
chapter-2/demo/.claude/skills/bid-link/: skill.md
chapter-2/demo/.claude/skills/bid-report/: skill.md
chapter-2/demo/.claude/skills/bid-run/: skill.md
chapter-2/demo/.claude/skills/bid-search/: skill.md
chapter-2/demo/.claude/skills/bid-sync/: skill.md
chapter-2/demo/Prompt/: plan.md
chapter-2/demo/backend/: config.py  database.py  main.py
chapter-2/demo/backend/api/routes/: jobs.py  keywords.py  search.py  sheets.py
chapter-2/demo/backend/models/: bid.py  keyword.py  search_job.py
chapter-2/demo/backend/services/: google_sheets.py  koneps_api.py  koneps_scraper.py  search_engine.py
chapter-2/demo/bsc-dashboard/: package-lock.json  package.json
chapter-2/demo/bsc-dashboard/src/: App.tsx  index.css  types.ts
chapter-2/demo/bsc-dashboard/src/components/: DeadlineSoon.tsx  RecentBids.tsx  StatsCards.tsx
chapter-2/demo/bsc-dashboard/src/lib/: supabase.ts
chapter-2/demo/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
chapter-2/demo/frontend/src/: App.tsx
chapter-2/demo/frontend/src/components/: JobStatus.tsx  KeywordManager.tsx  ResultsTable.tsx  SearchPanel.tsx  SheetsSync.tsx
chapter-2/demo/frontend/src/hooks/: useApi.ts
chapter-2/demo/frontend/src/types/: index.ts
(+20 files in other folders)
